Use visibility, position and z-index to hide radio/checkbox inputs as FF has issues with display none

--- a/sass/ui/_forms.scss
+++ b/sass/ui/_forms.scss
@@ -63,7 +63,9 @@ form {
 		position: relative;
 	}
 	.radio input[type="radio"], .checkbox input[type="checkbox"] {
-		display: none;
+		visibility: hidden;
+		position: absolute;
+		z-index: -99999;
 	}
 	.input {
 		position: relative;
